--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ target
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-sample-markdowns-docdir/
 .DS_Store
 litho-book.toml
+.litho/
