--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ tracing-subscriber = "0.3"
 # 时间处理
 chrono = { version = "0.4", features = ["serde"] }
 
+# HTTP客户端 (用于AI助手)
+reqwest = { version = "0.12", features = ["json"] }
+
 # Unix系统调用 (用于权限检查)
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
