--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,11 @@ tracing-subscriber = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 
 # HTTP客户端 (用于AI助手)
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
+
+# 异步流处理
+async-stream = "0.3"
+futures = "0.3"
 
 # Unix系统调用 (用于权限检查)
 [target.'cfg(unix)'.dependencies]
